* Added method to shut down the broker. * Run uses commons-cli to manage command line arguments. * InterProScanMaster now accepts run-time arguments. * Added an EmbeddedWorkerFactory interface / implementation. * Jobs now have 'analysis' flag. * DomainFinder3 parameter added to properties. * single-jvm configuration quartz removed. * EBI specific settings added to application-defualt.properties. * commons-cli added as dependency
git-svn-id: https://interproscan.googlecode.com/svn/trunk@556 ea5da8b0-6d6b-11de-9de6-4d42d2ab87c0